objects/ssot__ContactPointEmail__dlm.object
<CustomObject>
    <fields>
        <fullName>cdp_crm_dk1__ssot_PartyId_map_ssot_Id_1639519180002__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ssot_PartyId_map_ssot_Id_1639519180002</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>ssot_PartyId_map_ssot_Id_1639519180002</relationshipLabel>
        <relationshipName>ssot_PartyId_map_ssot_Id_1639519180002</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cdp_crm_dk2__ssot_PartyId_map_ssot_Id_1639532196110__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ssot_PartyId_map_ssot_Id_1639532196110</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>ssot_PartyId_map_ssot_Id_1639532196110</relationshipLabel>
        <relationshipName>ssot_PartyId_map_ssot_Id_1639532196110</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ActiveFromDate__c</fullName>
        <label>Active From Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ActiveToDate__c</fullName>
        <label>Active To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BestTimeToContactEndTime__c</fullName>
        <label>Best Time To Contact End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BestTimeToContactStartTime__c</fullName>
        <label>Best Time To Contact Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BestTimeToContactTimezoneId__c</fullName>
        <label>Best Time to Contact Timezone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BestTimeToContactTimezone__c</fullName>
        <label>Best Time to Contact Timezone</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointTypeId__c</fullName>
        <label>Contact Point Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreationEventId__c</fullName>
        <label>Creation Event</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreationEventObject__c</fullName>
        <label>Creation Event Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailAddress__c</fullName>
        <label>Email Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailDomain__c</fullName>
        <label>Email Domain</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailLatestBounceDateTime__c</fullName>
        <label>Email Latest Bounce Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EmailLatestBounceReasonText__c</fullName>
        <label>Email Latest Bounce Reason Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailMailBox__c</fullName>
        <label>Email Mail Box</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForBusinessUse__c</fullName>
        <label>For Business Use</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForPersonalUse__c</fullName>
        <label>For Personal Use</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Contact Point Email Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Is Active</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsUndeliverable__c</fullName>
        <label>Is Undeliverable</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsVerified__c</fullName>
        <label>Verified</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyRoleId__c</fullName>
        <label>Party Role</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreferenceRankNumber__c</fullName>
        <label>Preference Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryFlag__c</fullName>
        <label>Primary Flag</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProfileFirstCreatedDate__c</fullName>
        <label>Profile First Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ProfileLastUpdatedDate__c</fullName>
        <label>Profile Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ProfileOccurrenceCount__c</fullName>
        <label>Profile Occurrence Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TimezoneCode__c</fullName>
        <label>Timezone Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UsageType__c</fullName>
        <label>Usage Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761162380_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContactPointEmail_PartyId_map_Indivi_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>ContactPointEmail_PartyId_map_Indivi_rel</relationshipLabel>
        <relationshipName>rel_1697761162380_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761176242_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual_Id_map_ContactPointEmail__rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>Individual_Id_map_ContactPointEmail__rel</relationshipLabel>
        <relationshipName>rel_1697761176242_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ssot_Id_map_ssot_Id_1629904018724__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ssot_Id_map_ssot_Id_1629904018724</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ssot_Id_map_ssot_Id_1629904018724</relationshipLabel>
        <relationshipName>ssot_Id_map_ssot_Id_1629904018724</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>